--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnantaHairStudio">
-        <activity android:name=".signup.LoginActivity"></activity>
+        <activity android:name=".referal.ReferalActivity"></activity>
+        <activity android:name=".home.HomeActivity" />
+        <activity android:name=".signup.LoginActivity" />
         <activity android:name=".signup.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
