--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnantaHairStudio">
         <activity android:name=".referal.ReferalActivity"></activity>
-        <activity android:name=".home.HomeActivity" />
+        <activity android:name=".activities.HomeActivity" />
         <activity android:name=".signup.LoginActivity" />
         <activity android:name=".signup.MainActivity">
             <intent-filter>
