locate studio, gallery, and service screen implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnantaHairStudio">
-        <activity android:name=".referal.ReferalActivity"></activity>
-        <activity android:name=".activities.HomeActivity" />
+        <activity android:name=".gallery.GalleryActivity"></activity>
+        <activity android:name=".referal.ReferalActivity" />
+        <activity
+            android:name=".activities.HomeActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".signup.LoginActivity" />
         <activity android:name=".signup.MainActivity">
             <intent-filter>
