--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnantaHairStudio">
-        <activity android:name=".services.ServiceDetailsActivity"></activity>
+        <activity android:name=".cart.CheckoutCartActivity"></activity>
+        <activity android:name=".services.ServiceDetailsActivity" />
         <activity android:name=".gallery.GalleryActivity" />
         <activity android:name=".referal.ReferalActivity" />
         <activity
