--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     //View Model
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
