--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,13 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.incremental": "true"]
+//                includeCompileClasspath false
+            }
+        }
     }
 
     buildTypes {
@@ -29,6 +36,10 @@ android {
     }
     buildFeatures {
         dataBinding = true
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
@@ -63,5 +74,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // Room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
+    implementation "androidx.room:room-runtime:2.3.0"
+
+//    For RoomDatabase Debug
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 }
