--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AnantaHairStudio"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ongoingServices.OngoingActivity"></activity>
+        <activity android:name=".ongoingServices.OnGoingBookingActivity"></activity>
+        <activity android:name=".ongoingServices.OngoingActivity" />
         <activity android:name=".profileedit.EditDetailsActivity" />
         <activity android:name=".contactUs.ContactUsActivity" />
         <activity android:name=".cart.CheckoutCartActivity" />
