--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.freelance.anantahairstudio"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.razorpay:checkout:1.6.6'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -73,7 +74,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.6.0")
     //View Model
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Room
@@ -84,5 +85,6 @@ dependencies {
 
 //    For RoomDatabase Debug
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
 
 }
