--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:theme="@style/Theme.AnantaHairStudio"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ongoingServices.OnGoingBookingActivity"></activity>
-        <activity android:name=".ongoingServices.OngoingActivity" />
+        <activity android:name=".myBooking.OnGoingBookingActivity"></activity>
+        <activity android:name=".myBooking.OngoingActivity" />
         <activity android:name=".profileedit.EditDetailsActivity" />
         <activity android:name=".contactUs.ContactUsActivity" />
         <activity android:name=".cart.CheckoutCartActivity" />
@@ -50,12 +50,12 @@
             android:value="@string/default_notification_channel_id" />
         <service
             android:name=".notification.FCMService"
-            android:exported="false">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
 
 
     </application>
