--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,20 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/main_logo"
+        android:imeOptions="flagNoExtractUi"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/main_logo"
         android:supportsRtl="true"
-        android:imeOptions="flagNoExtractUi"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
         android:theme="@style/Theme.AnantaHairStudio"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".myBooking.OnGoingBookingActivity"></activity>
+        <activity android:name=".gallery.PhotoViewActivity"></activity>
+        <activity android:name=".myBooking.OnGoingBookingActivity" />
         <activity android:name=".myBooking.OngoingActivity" />
-        <activity android:name=".profileedit.EditDetailsActivity"
-            />
+        <activity android:name=".profileedit.EditDetailsActivity" />
         <activity android:name=".contactUs.ContactUsActivity" />
         <activity android:name=".cart.CheckoutCartActivity" />
         <activity android:name=".services.ServiceDetailsActivity" />
@@ -45,14 +45,13 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/main_logo" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
+
         <service
             android:name=".notification.FCMService"
             android:enabled="true"
@@ -61,8 +60,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-
     </application>
 
 </manifest>
