--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.freelance.anantahairstudio"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 7
-        versionName "1.1"
+        versionCode 9
+        versionName "1.3"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -88,4 +88,5 @@ dependencies {
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
+    implementation 'com.google.android.play:core:1.10.0'
 }
