--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.freelance.anantahairstudio"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 9
-        versionName "1.3"
+        versionCode 15
+        versionName "1.6"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -89,4 +89,6 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     implementation 'com.google.android.play:core:1.10.0'
+
+    implementation 'com.github.smarteist:autoimageslider:1.3.9'
 }
